--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ nav {
     font-size: 20px;
 }
 
-
 li:hover {
     cursor: pointer;
     background-color: #000;
@@ -48,7 +47,7 @@ li:hover {
 
 #form {
     width: 30%;
-    height: 58vh;
+    height: auto;
     margin: 5vw;
     padding: 2vh;
     background-color: #fff;
@@ -66,10 +65,6 @@ label {
     font-family: 'Times New Roman', Times, serif;
     font-weight: bolder;
     color: #808080;
-}
-
-#form>h1 {
-    margin-top: 30px;
 }
 
 #location {
