--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    margin: 0;
-    padding: 0;
     height: 100%;
     width: 100%;
     font-family: 'Acme', sans-serif;
@@ -47,7 +47,7 @@ li:hover {
 
 #form {
     width: 30%;
-    height: auto;
+    height: 60vh;
     margin: 5vw;
     padding: 2vh;
     background-color: #fff;
